# sqlite-geo

./: .gitignore  Cargo.toml  Makefile  README.md  test.sql
src/: cast.rs  constructors.rs  lib.rs  operations.rs  utils.rs
