[package]
name = "sqlite-geo"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlite-loadable = "0.0.5"
geo = "0.23.1"
serde_json = "1.0"
geojson = {version="0.24.0", features=["geo-types"]}
wkt = {version="0.10.3", features=["geo-types"]}
postgis = "0.9.0"
geo-postgis = "0.2.2"
geo-types = "0.7.8"

[lib]
crate-type = ["cdylib"]