[package]
name = "sqlite-geo"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlite-loadable = "0.0.5"
geozero = { version = "0.9.7", default-features = false, features = ["with-wkb", "with-geo"]}
geo = "0.24.1"
geo-types = "0.7.9"
geojson = {version="0.24.0", features=["geo-types"]}
serde_json = "1.0.95"
wkt = {version="0.10.3", features=["geo-types"]}

[lib]
crate-type = ["cdylib"]
